# juggler

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.yml
crates/gateway-core/: Cargo.toml  Dockerfile
crates/gateway-core/src/: main.rs
crates/gateway-core/src/auth/: cache.rs  middleware.rs  mod.rs
crates/gateway-core/src/client/: http.rs
crates/gateway-core/src/providers/: anthropic.rs  gemini.rs  mod.rs  pricing.rs
crates/gateway-core/src/reliability/: audit.rs  breaker.rs  coordinator.rs  mod.rs  window.rs
crates/gateway-core/src/routing/: router.rs
crates/gateway-core/src/server/: handlers.rs  models.rs
deploy/k8s/: juggler.yaml
docker/clickhouse-init/: init.sql
docker/postgres-init/: init.sql
docs/: LLM_Gateway_PRD.txt
services/admin-api/: Dockerfile  dashboard.html  go.mod  go.sum  main.go
services/admin-api/internal/handlers/: analytics.go  keys.go
