[package]
name = "gateway-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
futures = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bytes = "1.6.0"
tokio-stream = "0.1.15"
async-stream = "0.3.5"
dotenvy = "0.15"
serde_yaml = "0.9.34"
